fix avatar covering name on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ img {
   transition: opacity 0.5s ease-in-out;
   left: 50%;
   width: 100px;
-  margin-top: -25px;
+  margin-top: -60px;
 }
 .navbar-custom .avatar-container  .avatar-img-border {
   width: 100%;
@@ -189,7 +189,6 @@ img {
 @media only screen and (min-width: 768px) {
   .navbar-custom .avatar-container {
     width: 150px;
-    margin-top: -60px;
   }
 
   .navbar-custom .avatar-container  .avatar-img-border {
